# digestive-functors-scotty

./: README.md  digestive-functors-scotty.cabal  hie.yaml
src/Text/Digestive/: Scotty.hs
