name:                digestive-functors-scotty
version:             0.2.0.2
synopsis:            Scotty backend for the digestive-functors library
description:         Scotty backend for the digestive-functors library
homepage:            https://github.com/mmartin/digestive-functors-scotty
license:             BSD3
license-file:        LICENSE
author:              Mārtiņš Mačs
maintainer:          <nicvaltel@gmail.com>
category:            Web
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  GHC-options:         -Wall -fwarn-tabs

  exposed-modules:     Text.Digestive.Scotty

  build-depends:       base               ==4.*
                     , digestive-functors >=0.7
                     , scotty             >=0.7
                     , bytestring         >=0.9
                     , http-types         >=0.8
                     , text               >=0.11
                     , wai                >=2.0.0
                     , wai-extra          >=2.0.1
                     , conduit            >= 1.3.5

source-repository head
  Type: git
  Location: https://github.com/mmartin/digestive-functors-scotty

